--- a/pages/accounts/style_account.css
+++ b/pages/accounts/style_account.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-/* Nav bar */
+/* header */
 .container {
     display: flex;
     position: fixed;
@@ -67,9 +67,6 @@ nav a {
     .container {
         font-size: 14px;
     }
-    .container-menu-bar li{
-        font-size: 15px;
-    }
     .nav-middle-part a {
         height: 35px;
     }
@@ -83,22 +80,4 @@ nav a {
         padding: 0px 20px !important;
     }
 }
-/* menu bar */
-.container-menu-bar{
-    font-size: 20px;
-    overflow: auto;
-    margin-top: 80px;
-}
-.menu-bar {
-    display: flex;
-    justify-content: space-evenly;
-    list-style: none;
-}
-.menu-bar li {
-    padding: 10px;
-    cursor: pointer;
-}
-.menu-bar li:hover {
- background-color: #43655A;
- color: white;
-}
+/* accounts */
