--- a/pages/forgot/style_forgot.css
+++ b/pages/forgot/style_forgot.css
@@ -103,4 +103,34 @@ form {
     padding: 10px;
     background-color: #e4ede6;
     justify-content: center;
+    margin-top: 5px;
+}
+
+form>div {
+    width: 100%;
+}
+
+.forgot_form_container input {
+    margin: 10px;
+    padding: 10px;
+    font-size: 13px;
+    height: 35px;
+    border: none;
+    outline: none;
+    width: 95%;
+    display: flex;
+}
+.forgot_form_container button {
+    height: 35px;
+    width: 30%;
+    border: none;
+    cursor: pointer;
+    background-color: #43655A;
+    color: white;
+    font-size: 18px;
+    border-radius: 20px;
+}
+.forgot-text{
+    font-size: 13px;
+    color: rgb(131, 131, 131);
 }
