--- a/pages/login/style_login.css
+++ b/pages/login/style_login.css
@@ -97,13 +97,14 @@ nav a {
 }
 
 form {
-    margin-top: 20px;
+    margin-top: 10px;
     display: flex;
     flex-wrap: wrap;
     padding: 10px;
     background-color: #e4ede6;
     justify-content: center;
     align-items: center;
+    padding-bottom: 20px;
 }
 
 form>div {
