--- a/pages/admin/add_product/style_add_product.css
+++ b/pages/admin/add_product/style_add_product.css
@@ -26,7 +26,7 @@ header h1 {
 .logo {
     width: 200px;
     display: flex;
-    justify-content: center;overflow: hidden;
+    justify-content: center;
 }
 
 .header-title {
@@ -53,6 +53,55 @@ main {
     justify-content: center;
     overflow: hidden;
 }
+
 .menu-list ul li a:hover {
     text-decoration: underline;
+}
+
+.product-add-form {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    width: 100%;
+}
+form {
+    padding: 20px;
+   /*  border: 1px solid #ccc; */
+    /* border-radius: 5px; */
+    background-color: #fff;
+    /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);  */
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+input,
+select {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+button {
+    width: 100%;
+    padding: 10px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+button:hover {
+    background-color: #45a049;
 }
