--- a/pages/admin/add_product/style_add_product.css
+++ b/pages/admin/add_product/style_add_product.css
@@ -1,6 +1,6 @@
 * {
     margin: 0px;
-    padding: 0%;
+    padding: 0px;
     box-sizing: border-box;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
 }
@@ -41,6 +41,7 @@ ul {
 
 main {
     display: flex;
+    width: 100%;
 }
 
 .menu-bar {
@@ -62,11 +63,12 @@ main {
     display: flex;
     justify-content: center;
     margin-top: 50px;
-    width: 100%;
+    width: calc(100% - 200px);
 }
+
 form {
     padding: 20px;
-   /*  border: 1px solid #ccc; */
+    /*  border: 1px solid #ccc; */
     /* border-radius: 5px; */
     background-color: #fff;
     /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);  */
