--- a/pages/cart/style_cart.css
+++ b/pages/cart/style_cart.css
@@ -248,3 +248,8 @@ thead{
 .checkout-btn:hover {
     background-color: #e65c00;
 }
+
+.checkout-btn a{
+    text-decoration: none;
+    color: #ffffff;
+}
