--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
 /* Nav bar */
 .container {
     display: flex;
@@ -17,21 +18,26 @@
     padding: 10px;
     width: 100%;
     overflow: auto;
+    z-index: 1000;
 }
+
 nav a {
     text-decoration: none;
     color: #43655A;
 }
+
 .nav-first-part,
 .nav-middle-part,
 .nav-last-part {
     margin: 5px 10px 0px 5px;
 }
+
 .nav-middle-part {
     flex-grow: 1;
     display: flex;
     justify-content: center;
 }
+
 .nav-middle-part input {
     padding-left: 10px;
     background-color: #e4ede6;
@@ -41,6 +47,7 @@ nav a {
     outline: none;
     font-size: 20px;
 }
+
 .nav-middle-part a {
     display: flex;
     align-items: center;
@@ -52,53 +59,138 @@ nav a {
     margin-left: -1px;
     border-radius: 0 8px 8px 0;
 }
+
 .nav-last-part {
     display: flex;
     gap: 20px;
     justify-content: center;
 }
+
 .nav-user-account-bar,
 .nav-cart-bar {
     display: flex;
     align-items: center;
     gap: 5px;
 }
+
 @media screen and (max-width: 450px) {
     .container {
         font-size: 14px;
     }
-    .container-menu-bar li{
+
+    .container-menu-bar li {
         font-size: 15px;
     }
+
     .nav-middle-part a {
         height: 35px;
     }
+
     .nav-middle-part input {
         display: none;
     }
+
     .nav-middle-part a {
         border-radius: 8px 8px;
     }
-   #hero {
+
+    #hero {
         padding: 0px 20px !important;
     }
 }
+
 /* menu bar */
-.container-menu-bar{
+.container-menu-bar {
     font-size: 20px;
     overflow: auto;
     margin-top: 80px;
 }
+
 .menu-bar {
     display: flex;
     justify-content: space-evenly;
     list-style: none;
 }
+
 .menu-bar li {
     padding: 10px;
     cursor: pointer;
 }
+
 .menu-bar li:hover {
- background-color: #43655A;
- color: white;
+    background-color: #43655A;
+    color: white;
+}
+
+/* product card */
+.product-view {
+    margin: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
+}
+
+.product-card {
+    width: 250px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+}
+
+.product-image {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+    margin-bottom: 15px;
+}
+
+.product-name {
+    font-size: 18px;
+    color: #333;
+    margin: 10px 0;
+}
+
+.product-price {
+    font-size: 20px;
+    color: #000000;
+    margin: 5px 0;
+}
+
+.buttons {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 15px;
+    border: none;
+    outline: none;
+}
+
+.buy-now {
+    background-color: #e4ede6;
+    color: black;
+    padding: 8px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+}
+
+.add-to-cart {
+    background-color: #43655A;
+    color: #fff;
+    padding: 8px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+}
+
+.add-to-cart:hover,
+.buy-now:hover {
+    background-color: #37534b;
+    color: #fff;
 }
