--- a/pages/admin/add_product/style_add_product.css
+++ b/pages/admin/add_product/style_add_product.css
@@ -48,7 +48,7 @@ main {
     padding: 20px;
     line-height: 40px;
     width: 200px;
-    height: 90dvh;
+    height: auto;
     background-color: aliceblue;
     display: flex;
     justify-content: center;
@@ -62,38 +62,29 @@ main {
 .product-add-form {
     display: flex;
     justify-content: center;
-    margin-top: 50px;
+    align-items: center;
     width: calc(100% - 200px);
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 form {
-    padding: 20px;
-    /*  border: 1px solid #ccc; */
-    /* border-radius: 5px; */
-    background-color: #fff;
-    /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);  */
-}
-
-.form-group {
-    margin-bottom: 15px;
-}
-
-label {
-    display: block;
-    font-weight: bold;
-    margin-bottom: 5px;
-}
-
-input,
-select {
-    width: 100%;
-    padding: 8px;
     border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
+    border-radius: 5px;
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+}
+.product-add-form form {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* Two columns */
+    gap: 20px; /* Space between the grid items */
+    max-width: 600px;
+    margin: auto;
 }
 
-button {
+.form-group button{
     width: 100%;
     padding: 10px;
     background-color: #4CAF50;
@@ -104,6 +95,54 @@ button {
     font-size: 16px;
 }
 
-button:hover {
+.form-group button:hover {
     background-color: #45a049;
+}
+.product-name,
+.product-categories,
+.product-price,
+.product-code {
+    grid-column: span 1; /* Each takes up one column */
+}
+
+.product-description,
+.front-image,
+.other-images,
+.form-group {
+    grid-column: span 2; /* These span both columns */
+}
+
+label {
+    display: block;
+    margin-bottom: 8px;
+    font-weight: bold;
+}
+
+input[type="text"],
+input[type="number"],
+input[type="file"],
+select {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.image-preview img {
+    width: 100px; /* Set the desired width for preview images */
+    height: auto;
+    margin-right: 10px;
+    margin-top: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 5px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+.product-description textarea {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
 }
