add product details page and update product add form

--- a/pages/admin/add_product/style_add_product.css
+++ b/pages/admin/add_product/style_add_product.css
@@ -229,3 +229,12 @@ input[type=color] {
     outline: none;
     overflow-y: auto;
 }
+
+ul {
+    list-style-type: disc; 
+    margin-left: 16px;
+}
+
+ul li {
+    margin-bottom: 2px;
+}
