--- a/pages/product_details/style_product_details.css
+++ b/pages/product_details/style_product_details.css
@@ -122,42 +122,27 @@ nav a {
     color: white;
 }
 
-/*  */
-
 .product-container {
     display: flex;
     margin: 20px;
     padding: 20px;
-    /*  background-color: #43655A; */
 }
 
 .product-image-section {
     border: .5px solid #777;
     border-radius: 8px;
     margin-left: 20px;
-    height: 350px;
+    height: 400px;
     width: 350px;
-    /* background-color: #e4ede6; */
-}
-
-.product-image {
-    /* background-color: #654343; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 270px;
-    padding: 15px;
-    cursor: zoom-in;
 }
 
 .product-thumbnails {
     display: flex;
-    height: 80px;
+    height: auto;
     justify-content: space-around;
-    align-items: center;
+   /*  align-items: center; */
     padding: 15px;
-
-    /* background-color: #405244; */
+    /* background-color: #44997e; */
 }
 
 .product-thumbnails img {
@@ -209,4 +194,32 @@ nav a {
     margin: 0;
     width: 100%;
     text-align: left;
+}
+
+/*  */
+
+.product-image {
+    text-align: center;
+    width: 320px;
+    height: 300px;
+    padding: 15px;
+    position: relative;
+    /* background-color: #44997e; */
+}
+ 
+#imageZoom::after{
+    padding: 15px;
+    display: var(--display);
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    background-image: var(--url);
+    background-size: cover;
+    background-size: 200%;
+    background-position: var(--zoom-x) var(--zoom-y);
+    position: absolute;
+    left: 0;
+    top:0;
+    border-radius: 8px;
 }
