--- a/pages/admin/product_list/style_product_list.css
+++ b/pages/admin/product_list/style_product_list.css
@@ -71,6 +71,7 @@ main {
 
 .product-table {
     width: 100%;
+
     border-collapse: collapse;
 }
 
@@ -115,6 +116,7 @@ main {
     width: 25%;
     text-align: center;
 }
+
 .product-table button {
     padding: 8px 12px;
     font-size: 14px;
@@ -129,3 +131,28 @@ main {
 .product-table button:hover {
     background-color: #45a049;
 }
+
+.product-table a {
+    padding: 10px 28px;
+    margin-left: 10px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #585e5c;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+   
+/*     display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; 
+    width: 90px;
+    height: 45px; */
+}
+
+.product-table a:hover {
+    background-color: #45a049;
+}
+
