--- a/pages/accounts/user_profile/style_user_profile.css
+++ b/pages/accounts/user_profile/style_user_profile.css
@@ -1,17 +1,13 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 20px;
-    background-color: #f9f9f9;
-}
 
 #user-profile {
+
     background: white;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     max-width: 600px;
     margin: auto;
+    margin-top: 50px;
 }
 
 h1 {
